@@ -4,6 +4,7 @@ plugins {
 }
 
 group = 'com.dervarex.minified.utils'
+version = '0.1.0-SNAPSHOT'
 
 description = 'General utilities'
 
@@ -18,4 +19,13 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    jvmArgs '--add-modules', 'jdk.httpserver'
 }
